--- a/package.json
+++ b/package.json
@@ -10,23 +10,19 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "prisma": "^5.17.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
