--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@prisma/client": "^5.17.0",
+    "axios": "^1.7.3",
+    "chart.js": "^4.4.3",
+    "firebase": "^10.12.5",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "prisma": "^5.17.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-quill": "^2.0.0"
   },
