--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
