--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5"
   },
