--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "blogging-application",
   "version": "0.1.0",
   "private": true,
+  "main": "electron.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "electron": "electron ."
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
@@ -21,7 +23,6 @@
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
-    "prisma": "^5.17.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -45,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prisma": "^5.18.0",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.1"
   }
